# Hyperspectral-Inverse-Skinning

./: .gitignore  CMakeLists.txt  COMMANDS.md  DMAT2MATLAB.py  HyperCSI.py  LICENSE  README.md  SmoothSparseWeights.py  SmoothSparseWeights_Alternating.py  SmoothSparseWeights_CVXOPT.py  SparseWeights-test-GroundTruth_test.ipynb  SparseWeights-test.ipynb  SparseWeightsAlternating-test.ipynb  SparseWeights_CVXOPT-test - cheburashka - WITH - spatial_term.ipynb  SparseWeights_CVXOPT-test - cheburashka- objective_func2.ipynb  SparseWeights_CVXOPT-test - cheburashka.ipynb  SparseWeights_CVXOPT-test - cow-objective_func2.ipynb  SparseWeights_CVXOPT-test - cow.ipynb  SparseWeights_CVXOPT-test - wolf-objective_func2.ipynb  SparseWeights_CVXOPT-test - wolf.ipynb  SparseWeights_CVXOPT-test.ipynb  binary_search_opt.py  clean_mesh.py  compact_groundtruth_transformations.py  compare.py  compare_E_RMS_kavan2010.py  compare_per_vertex_transformation.py  compare_simpler.py  compute_bpvf.py  convex_hull.py  dataset_maker.py  derivatives.py  error_compare.py  estimate_weights.cpp  flat_intersection.py  flat_intersection_apply_output.py  flat_intersection_biquadratic_gradients.py  flat_intersection_cayley_gradients.py  flat_intersection_cayley_grassmann_gradients.py  flat_intersection_derivatives.txt  (+89 more)
PerVertex/: Compute_transformation_matrix_from_vertex_3D_position_pair-Null_sapce_test-AllPoses-cube4_example.ipynb  Compute_transformation_matrix_from_vertex_3D_position_pair-Null_sapce_test-cube4_example.ipynb  Compute_transformation_matrix_from_vertex_3D_position_pair_minimize_svd_singular_value-cube4_example-allPoses.ipynb  Compute_transformation_matrix_from_vertex_3D_position_pair_minimize_svd_singular_value.ipynb  Extract_Transformation_matrix_minimize_SVD_singular_value.py  Extract_Transformation_matrix_minimize_SVD_singular_value_allPoses.py  format_loader.py  geodesic.py  includes.py  local_subspace_recover.py  single_recovery.py  test.py
Recover Transformation Matrix/: Compute_transformation_matrix_from_vertex_3D_position_pair_minimize_svd_singular_value-cube4_example-allPoses.ipynb  Compute_transformation_matrix_from_vertex_3D_position_pair_minimize_svd_singular_value.ipynb  Extract_Transformation_matrix_minimize_SVD_singular_value.py  Extract_Transformation_matrix_minimize_SVD_singular_value_allPoses.py  batch_recovery.py
SSD_res/: camel-gallop-10-output.txt  camel-gallop-20-output.txt  cat-10-output.txt  cat-15-output.txt  cat-20-output.txt  cat-25-output.txt  cat-output.txt  cat-poses-10-unconstrained.txt  cheb11-2-output.txt  cow2-15-output.txt  cube4-1-output.txt  cube4-2-output.txt  elephant-gallop-10-unconstrained.txt  elephant-gallop-20-unconstrained.txt  elephant-poses-10-output.txt  elephant-poses-21-output.txt  elephant-poses-21-unconstrained.txt  horse-collapse-10-output.txt  horse-collapse-10-unconstrained.txt  horse-collapse-20-unconstrained.txt  horse-gallop-30-unconstrained.txt  horse-poses-20-unconstrained.txt  wolf21-1-output.txt  wolf21-2-output.txt
SSD_unconstrained/: all_error.out  cat-poses-15-unconstrained.txt  cat-poses-20-unconstrained.txt  cat-poses-25-unconstrained.txt  chickenCrossing-20-unconstrained.txt  chickenCrossing-28-unconstrained.txt  elephant-gallop-27-unconstrained.txt  elephant-poses-10-unconstrained.txt  face-poses-27-unconstrained.txt  horse-gallop-10-unconstrained.txt  horse-gallop-20-unconstrained.txt  horse-poses-10-unconstrained.txt  lion-poses-10-unconstrained.txt  lion-poses-21-unconstrained.txt  pcow-10-unconstrained.txt  pcow-24-unconstrained.txt  pdance-10-unconstrained.txt  pdance-24-unconstrained.txt  pjump-20-unconstrained.txt  pjump-40-uncontrained.txt
cmake/: FindEMBREE.cmake  FindGLFW.cmake  FindMOSEK.cmake  FindOpenImageIO.cmake
experiments/: .gitignore  lbs_convex_hull N>2.ipynb  lbs_convex_hull.ipynb
models/: .mlp  README.md
results_songrun/: .gitignore  run_all_cat.sh  run_all_elephant.sh  run_all_gt_per_vertex.sh  run_all_horse.sh
results_yotam/: .gitignore  run_all.sh
test_difficulties/: test_flat_difficulites.out-v3  test_flat_difficulties_24D-100N_extra.HOW  test_flat_difficulties_24D-100N_extra.sh
viewer/: blend_scene.cpp  blend_scene.h  common.h  controls.cpp  controls.h  demo_state.h  draw_handles.cpp  draw_handles.h  flattener.cpp  flattener.h  glcompat.h  save_screenshot.cpp  (+5 more)
(+608 files in other folders)
